examples/test/testpolicy921.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy921
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key42: value10
      key48: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value11
          key35: value15
          key49: value40
      podSelector:
        matchLabels:
          key30: value9
          key18: value40
